--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "mysql2": "^2.1.0"
+    "knex": "^0.20.10",
+    "mysql2": "^2.1.0",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.8",
     "typescript": "^3.8.2"
   }
 }
