--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "ES5",
         "experimentalDecorators": true,
         "outDir": "dist",
+        "moduleResolution": "Node",
         "typeRoots": [
             "./node_modules/@types",
             "./@types"
