--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "faker": "^4.1.0",
     "knex": "^0.20.10",
     "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13"
   },
+  "scripts": {
+    "dev": "nodemon src/index.ts"
+  },
   "devDependencies": {
     "@types/mysql": "^2.15.8",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
   }
 }
