--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@codeinplace/node-mysql": "^1.0.2",
     "@rededompedro/mysql": "^2.0.6",
     "faker": "^4.1.0",
     "knex": "^0.20.10",
-    "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13"
   },
   "scripts": {
