--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "@codeinplace/node-mysql": "^1.0.2",
-    "@loopback/metadata": "^1.4.1",
     "@rededompedro/mysql": "^2.0.6",
     "faker": "^4.1.0",
-    "knex": "^0.20.10"
+    "knex": "^0.20.10",
+    "reflect-metadata": "^0.1.13"
   },
   "scripts": {
     "dev": "nodemon src/index.ts"
@@ -16,7 +16,6 @@
   "devDependencies": {
     "@types/mysql": "^2.15.8",
     "nodemon": "^2.0.2",
-    "reflect-metadata": "^0.1.13",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
   }
