--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@codeinplace/node-mysql": "^1.0.2",
-    "@rededompedro/mysql": "^2.0.6",
+    "@codeinplace/node-mysql": "^1.1.3",
+    "@types/node": "^13.7.7",
     "faker": "^4.1.0",
-    "knex": "^0.20.10",
-    "reflect-metadata": "^0.1.13"
+    "immer": "^6.0.1"
   },
   "scripts": {
     "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
-    "@types/mysql": "^2.15.8",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
